Python: Bmesh "from_object" broken in 2.8 #59069

Closed
opened 2018-12-09 16:49:15 +01:00 by lucas veber · 8 comments

Win 10
Gtx 980

Blender 2.8

Creating a bmesh object using from_object used to work in 2.79 but is broken in 2.8

  • Run the following code in the script editor
import bpy, bmesh
bm = bmesh.new()
bm.from_object(bpy.context.active_object,bpy.context.scene)
  • It returns the error:
SystemError: <method 'from_object' of 'BMesh' objects> returned NULL without setting an error
Win 10 Gtx 980 Blender 2.8 Creating a bmesh object using **from_object** used to work in 2.79 but is broken in 2.8 - Run the following code in the script editor ``` import bpy, bmesh bm = bmesh.new() bm.from_object(bpy.context.active_object,bpy.context.scene) ``` - It returns the error: ``` SystemError: <method 'from_object' of 'BMesh' objects> returned NULL without setting an error ```
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

Added subscriber: @JoseConseco

Added subscriber: @JoseConseco

This looks similar to error I got in https://developer.blender.org/T58734. Except there it was bvhtree.fromObject that was broken.

This looks similar to error I got in https://developer.blender.org/T58734. Except there it was bvhtree.fromObject that was broken.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-09 20:06:15 +01:00
Member

Confirmed. Will have a look tomorrow.

As a (temporary) workaround you can use

import bmesh
bm = bmesh.new()
mesh = bpy.context.active_object.to_mesh(bpy.context.depsgraph, True)
bm.from_mesh(mesh)
Confirmed. Will have a look tomorrow. As a (temporary) workaround you can use ``` import bmesh bm = bmesh.new() mesh = bpy.context.active_object.to_mesh(bpy.context.depsgraph, True) bm.from_mesh(mesh) ```
Author

Thank you, will try it!
I'm a little concerned by performances though, "to_mesh" creates a new mesh data block, so I thought it may be slower than the bmesh method. But maybe i'm wrong.

Thank you, will try it! I'm a little concerned by performances though, "to_mesh" creates a new mesh data block, so I thought it may be slower than the bmesh method. But maybe i'm wrong.

This issue was referenced by eb83efb6d1

This issue was referenced by eb83efb6d1bbbde744a35aa56b33473ad6961132
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59069
No description provided.